# sustainability_health_check

./: .gitignore  README.md  api.py  app.py  create_test_fixtures.py  extraction_core.py  index.html  package.json  playwright.config.ts  pyproject.toml  requirements.lock.txt  requirements.txt  smoke_test.py  test_extraction.py  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  dep_refresh.yml
e2e/: smoke.spec.ts
src/: main.ts  styles.css
src/export/: csv.ts  ppt.ts
src/ingestion/: parser.ts
src/kpi/: engine.ts
src/mapping/: mapper.ts  synonyms.ts
src/state/: store.ts  types.ts
src/ui/: Wizard.ts
src/ui/steps/: Step1Intake.ts  Step2Validation.ts  Step3KPI.ts  Step4Lock.ts  Step5Export.ts
src/validation/: validator.ts
src/workers/: xlsxWorker.ts
tests/: kpi.spec.ts  mapping.spec.ts  validation.spec.ts
